@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix parsing of empty multipart/form-data forms
 
 0.007     2021-04-27 02:00:33 EDT
   - Support reading request body parameters from multipart/form-data requests
